Update README with project details and setup instructions
Added instructions for running the Gradient Descent Visualization project.